# dj-ledfx

./: .gitignore  CLAUDE.md  README.md  config.example.toml  config.toml  config.toml.bak  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/agents/: test-runner.md
.claude/skills/run-demo/: SKILL.md
.superpowers/brainstorm/17121-1773371025/: .server-stopped  architecture-overview.html
.superpowers/brainstorm/64013-1773374931/: .server-info  architecture-overview.html  compositor-mapping.html  scene-and-fallback.html  scene-model.html  testing-summary.html
.superpowers/brainstorm/71311-1773367246/: .server-stopped
docs/: backlog.md
docs/superpowers/plans/: 2026-03-11-dj-ledfx-mvp.md  2026-03-12-adaptive-latency-compensation.md  2026-03-12-lifx-lan-integration.md  2026-03-13-3d-spatial-mapping.md  2026-03-13-govee-lan-protocol.md  2026-03-13-profiling-and-monitoring.md  2026-03-17-web-ui.md  (+7 more)
frontend/: CLAUDE.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: App.tsx  app.css  app.html
monitoring/: README.md  grafana-dashboard.json  prometheus.yml
scripts/: setup-monitoring.sh
src/: App.tsx
src/dj_ledfx/: __init__.py  __main__.py  config.py  events.py  main.py  metrics.py  status.py  transport.py  types.py
src/lib/: api-client.ts  ws-client.ts
src/pages/: scene.tsx
tests/: conftest.py  test_cli.py  test_config.py  test_events.py  test_integration.py  test_metrics.py  test_metrics_integration.py  test_status.py  test_transport.py  test_transport_integration.py  test_types.py
tests/beat/: test_clock.py  test_simulator.py
tests/devices/: test_adapter_state.py  test_backend.py  test_discovery.py  test_ghost.py  test_govee_stable_id.py  test_heuristics.py  test_lifx_stable_id.py  test_manager.py  test_openrgb.py  test_openrgb_backend.py  test_openrgb_stable_id.py
tests/effects/: test_beat_pulse.py  test_breathe.py  test_color.py  test_color_chase.py  test_deck.py  test_easing.py  test_energy.py  test_engine.py  test_engine_transport.py  test_fire_storm.py  test_params.py  test_presets.py  test_rainbow_wave.py  test_registry.py  test_strobe.py
tests/latency/: test_strategies.py  test_tracker.py
tests/persistence/: test_device_saved_state.py  test_state_db.py  test_toml_io.py
tests/prodjlink/: test_listener.py  test_packets.py
tests/scheduling/: test_scheduler.py  test_scheduler_transport.py
tests/spatial/: test_compositor.py  test_geometry.py  test_mapping.py  test_pipeline.py  test_pipeline_manager.py  test_scene.py  test_spatial_pipeline.py
tests/web/: conftest.py  test_app.py  test_router_config.py  test_router_devices.py  test_router_effects.py  test_router_scene.py  test_router_transport.py  test_ws.py  test_ws_transport.py
(+147 files in other folders)
