[project]
name = "dj-ledfx"
version = "0.1.0"
description = "Beat-synced LED effect engine driven by Pro DJ Link network data"
readme = "README.md"
authors = [
    { name = "Anirudh Lath", email = "anirudhlath@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "loguru",
    "numpy",
    "openrgb-python",
]

[project.scripts]
dj-ledfx = "dj_ledfx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_ledfx"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["dj_ledfx"]

[[tool.mypy.overrides]]
module = ["openrgb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
