[project]
name = "dj-ledfx"
version = "0.1.0"
description = "Beat-synced LED effect engine driven by Pro DJ Link network data"
readme = "README.md"
authors = [
    { name = "Anirudh Lath", email = "anirudhlath@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "granian>=2.7.2",
    "loguru",
    "numpy",
    "openrgb-python",
    "tomli_w>=1.0",
]

[project.scripts]
dj-ledfx = "dj_ledfx.main:main"

[project.optional-dependencies]
metrics = ["prometheus-client>=0.20"]
profiling = ["py-spy>=0.4", "viztracer>=1.0"]
web = ["fastapi>=0.115", "granian>=1.7", "pydantic>=2.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dj_ledfx"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["dj_ledfx"]

[[tool.mypy.overrides]]
module = ["openrgb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["viztracer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["granian.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi.*", "starlette.*", "pydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "prometheus-client>=0.20",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
